cmake_minimum_required(VERSION 3.30.1)
project(probabilistic_navigation_system)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(probabilistic_navigation_system main.cpp)
target_link_libraries(probabilistic_navigation_system ${OpenCV_LIBS})